# dialog-generator

./: dialogs_database.db  package-lock.json  package.json  tsconfig.json
@/components/ui/: select.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dialog/: commands.rs  mod.rs  source.rs  types.rs
src/components/: DialogCreator.tsx  DialogLoader.tsx  DialogRenderer.tsx  SpeakerCreator.tsx  StepRenderer.tsx  types.ts
src/stores/: DialogStore.ts  SpeakersStore.ts  StepsStore.ts
