[package]
name = "dialog-generator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dialog_generator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum_macros = "0.25.3"
strum = "0.25.0"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.39.3", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
bincode = "1.3.3"
